--- a/index.html
+++ b/index.html
@@ -349,6 +349,14 @@
                 <li class="nav-item"><a class="nav-link" href="#EditRequestLoanByEmployeeByID">Edit Request LoanBy Employee By ID</a></li>
                 <li class="nav-item"><a class="nav-link" href="#DeleteRequestLoanByEmployeeByID">Delete Request Loan By Employee By ID</a></li>
 
+                <!-- Employee Request Loan -->
+                <li class="nav-item"><a class="nav-link" href="#CreateHelpdeskLoanByEmployee">Create Help Desk By Employee</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewHelpdeskByEmployee">View All Help Desk By Employee</a></li>
+                <li class="nav-item"><a class="nav-link" href="#ViewHelpdeskByEmployeeByID">View Help Desk By Employee By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#EditHelpdeskByEmployeeByID">Edit Help Desk By Employee By ID</a></li>
+                <li class="nav-item"><a class="nav-link" href="#DeleteHelpdeskByEmployeeByID">Delete Help Desk By Employee By ID</a></li>
+
+
 
                 <li class="nav-item"><a class="nav-link" href="#Chatbot">Chatbot HR Harmony</a></li>
 
@@ -8885,6 +8893,186 @@
     "code": 200,
     "error": false,
     "message": "Request Loan deleted successfully"
+}
+                            </pre>
+            </div>
+        </div>
+
+        <div id="CreateHelpdeskLoanByEmployee" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Create Help Desk By Employee</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/employee/helpdesks</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>POST</code></p>
+                <p><strong>Request Body - Raw Json</strong></p>
+                <pre>
+{
+    "subject" : string,
+    "priority" : string,
+    "department_id" : int,
+    "description" : string
+}
+
+                            </pre>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 201,
+    "error": false,
+    "message": "Helpdesk created successfully",
+    "helpdesk": {
+        "id": 4,
+        "subject": string,
+        "priority": string,
+        "department_id": int,
+        "department_name": string,
+        "employee_id": int,
+        "employee_username": string,
+        "employee_full_name": string,
+        "description": string,
+        "created_at": time,
+        "updated_at": time
+    }
+}
+
+                        </pre>
+            </div>
+        </div>
+
+        <div id="ViewHelpdeskByEmployee" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>View All Help Desk By Employee</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/employee/helpdesks</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>GET</code></p>
+                <p><strong>Request Body</strong></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "helpdesk": [
+        {
+            "id": int,
+            "subject": string,
+            "priority": string,
+            "department_id": int,
+            "department_name": string,
+            "employee_id": int,
+            "employee_username": string,
+            "employee_full_name": string,
+            "description": string,
+            "created_at": time,
+            "updated_at": time"
+        }
+    ],
+    "message": "Helpdesk data retrieved successfully"
+}
+                    </pre>
+            </div>
+        </div>
+
+        <div id="ViewHelpdeskByEmployeeByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>View Help Desk By Employee By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/employee/helpdesks/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>GET</code></p>
+                <p><strong>Request Body</strong></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "helpdesk": {
+        "id": int,
+        "subject": string,
+        "priority": string,
+        "department_id": int,
+        "department_name": string,
+        "employee_id": int,
+        "employee_username": string,
+        "employee_full_name": string,
+        "description": string,
+        "created_at": time,
+        "updated_at": time
+    },
+    "message": "Helpdesk data retrieved successfully"
+}
+             </pre>
+            </div>
+        </div>
+
+
+        <div id="EditHelpdeskByEmployeeByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Edit Help Desk By Employee By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/employee/helpdesks/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>PUT</code></p>
+                <p><strong>Request Body - Raw Json</strong></p>
+                <pre>
+{
+    "subject" : string,
+    "priority" : string,
+    "department_id" : int,
+    "description" : string
+}
+                            </pre>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Helpdesk data updated successfully",
+    "helpdesk": {
+        "id": int,
+        "subject": string,
+        "priority": string,
+        "department_id": int,
+        "department_name": string,
+        "employee_id": int,
+        "employee_username": string,
+        "employee_full_name": string,
+        "description": string,
+        "created_at": time,
+        "updated_at": time
+    }
+}
+
+
+                            </pre>
+            </div>
+        </div>
+
+
+        <div id="DeleteHelpdeskByEmployeeByID" class="card mb-4 anchor">
+            <div class="card-body">
+                <h2>Delete Help Desk By Employee By ID</h2>
+                <p><strong>URL</strong></p>
+                <p><code>/employee/helpdesks/:id</code></p>
+                <p><strong>Method</strong></p>
+                <p><code>DELETE</code></p>
+                <p><strong>Note</strong></p>
+                <p><code>Include authorization token in headers.</code></p>
+                <p><strong>Response</strong></p>
+                <pre>
+{
+    "code": 200,
+    "error": false,
+    "message": "Helpdesk deleted successfully"
 }
                             </pre>
             </div>
