--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>HR Harmony API Documentation CICD</title>
+    <title>HR Harmony API Documentation</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
     <style>
@@ -369,7 +369,7 @@
             </ul>
         </nav>
         <div id="content" class="col">
-            <h1 class="my-4">HR Harmony API Documentation</h1>
+            <h1 class="my-4">HR Harmony API Documentation CICD</h1>
             <div id="endpoint" class="anchor">
                 <h2 class="my-4">Endpoint</h2>
                 <p><a href="https://hr-harmony.uc.r.appspot.com/">https://hr-harmony.uc.r.appspot.com/</a></p>
