--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
             </ul>
         </nav>
         <div id="content" class="col">
-            <h1 class="my-4">HR Harmony API Documentation CICD</h1>
+            <h1 class="my-4">HR Harmony API Documentation</h1>
             <div id="endpoint" class="anchor">
                 <h2 class="my-4">Endpoint</h2>
                 <p><a href="https://hr-harmony.uc.r.appspot.com/">https://hr-harmony.uc.r.appspot.com/</a></p>
